[package]
name = "chimerascript"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
pest = "2.7.10"
pest_derive = "2.7.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = {  version = "1.0.193", features = ["derive"] }
toml = "0.8.12"
